--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Login</title>
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/MQ.css">
 </head>
 <body>
     <main>
         <section id="login">
+            <div id="img">
+
+            </div>
             <div id="form">
                 <h1>Login</h1>
                 <p>Seja bem-vindo. Faça seu login para começar!</p>
-                <form action="login.php" method="post"></form>
+                <form action="login.php" method="post">
+                    
+                </form>
             </div>
         </section>
     </main>
