--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Projeto Login</title>
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="estilo/MQ.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" /> 
 </head>
 <body>
     <main>
@@ -16,8 +18,21 @@
             <div id="form">
                 <h1>Login</h1>
                 <p>Seja bem-vindo. Faça seu login para começar!</p>
-                <form action="login.php" method="post">
-                    
+                <form action="login.php" method="post" autocomplete="on">
+                <div class="campo" >
+                    <span class="material-symbols-outlined">
+                        person
+                        </span>
+                    <input type="email" name="email" id="iemail" placeholder="Login" required autocomplete="email">
+                </div> 
+                <div class="campo">
+                    <span class="material-symbols-outlined">
+                        passkey
+                        </span> 
+                    <input type="password" name="senha" id="isenha" placeholder="Senha" required minlength="8" maxlength="20" autocomplete="current-password">
+                </div>
+                <input type="submit" value="Entrar">  
+                <a href="esqueci.html" class="senhaf">Esqueci a senha</a>
                 </form>
             </div>
         </section>
